Fix #51 - wrap url in header

--- a/static/main.css
+++ b/static/main.css
@@ -114,7 +114,7 @@ a {
     .header span:first-of-type {
       border: none;
     }
-    .header .commit {
+    .header .commit, .header .url {
       display: block;
       word-wrap: break-word;
     }
